Fixing the overflow to the about page

--- a/styles/style.css
+++ b/styles/style.css
@@ -838,6 +838,9 @@ textarea {
 }
 
 /* Css for About Page */
+.overflow {
+  overflow-x: hidden;
+}
 
 .title-fsize {
   font-size: 2rem !important;
